@@ -62,7 +62,7 @@ libIntaRNA_a_HEADERS =    \
 					PredictorMfe2d.h \
 					PredictorMfe2dSeed.h \
 					PredictorMfe2dSeedExtension.h \
-					PredictorMfe2dSeedExtensionRiBlast.h \
+					PredictorMfe2dSeedExtensionRIblast.h \
 					PredictorMfe2dHeuristic.h \
 					PredictorMfe2dHeuristicSeed.h \
 					PredictorMfe2dHelixBlockHeuristic.h \
@@ -122,7 +122,7 @@ libIntaRNA_a_SOURCES =    \
 					PredictorMfe2d.cpp \
 					PredictorMfe2dSeed.cpp \
 					PredictorMfe2dSeedExtension.cpp \
-					PredictorMfe2dSeedExtensionRiBlast.cpp \
+					PredictorMfe2dSeedExtensionRIblast.cpp \
 					PredictorMfe2dHeuristic.cpp \
 					PredictorMfe2dHeuristicSeed.cpp \
 					PredictorMfe2dHelixBlockHeuristic.cpp \
